pkg/manifests/assets/dns/service.yaml
kind: Service
apiVersion: v1
# name, namespace,labels and annotations are set at runtime
spec:
  # clusterIP will be automatically managed.
  # selector is set at runtime
  internalTrafficPolicy: Local
  trafficDistribution: PreferSameNode
  ports:
  - name: dns
    port: 53
    targetPort: dns
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: dns-tcp
    protocol: TCP
  - name: metrics
    port: 9154
    targetPort: metrics
    protocol: TCP
